# CG2024

./: LICENSE  README.md
Debugging/: README.md
Weekly Workbooks/01 Introduction and Orientation/: README.md  index.html
Weekly Workbooks/01 Introduction and Orientation/01 Introduction/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/02 Language and Libraries/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/03 Using Your Own Computer (Native OS)/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/03 Using Your Own Computer (Native OS)/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/04 Using Your Own Computer (Resident OS)/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/04 Using Your Own Computer (Resident OS)/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/05 Using the Lab Machines/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/05 Using the Lab Machines/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/06 The Template Project/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/06 The Template Project/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/07 Understanding the Template/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/extras/: Vagrantfile
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/: .gitignore  CMakeLists.txt  Makefile  README.md
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/: CanvasPoint.cpp  CanvasPoint.h  CanvasTriangle.cpp  CanvasTriangle.h  Colour.cpp  Colour.h  DrawingWindow.cpp  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h  TextureMap.cpp  TextureMap.h  TexturePoint.cpp  TexturePoint.h  Utils.cpp  Utils.h
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/src/: RedNoise.cpp
Weekly Workbooks/02 Pixels and Interpolation/: README.md  index.html
Weekly Workbooks/02 Pixels and Interpolation/01 Introduction/text/: text.txt
Weekly Workbooks/03 Triangles and Textures/: README.md  index.html  texture.ppm
Weekly Workbooks/04 Wireframes and Rasterising/: README.md  index.html
Weekly Workbooks/04 Wireframes and Rasterising/models/: cornell-box.mtl
Weekly Workbooks/05 Navigation and Transformation/: README.md  index.html
Weekly Workbooks/05 Navigation and Transformation/models/: textured-cornell-box.mtl
Weekly Workbooks/06 Raytracing and Shadows/: README.md  index.html
Weekly Workbooks/07 Lighting and Shading/: README.md  index.html
Weekly Workbooks/08 Coursework Advanced Topics/: README.md  index.html
(+154 files in other folders)
